--- a/contact.css
+++ b/contact.css
@@ -157,6 +157,7 @@ input[type="submit"]:hover {
         right: 2px;
         margin: auto;
         top: 141px;
+        top: 100px;
         height: 68vh;
         width: 90%;
     }
@@ -204,6 +205,7 @@ input[type="submit"]:hover {
         font-size: 16px;
         text-align: center;
         margin-top: 16px;
+        margin-top: 18px;
     }
     .socials {
          justify-content: center;
